--- a/style.css
+++ b/style.css
@@ -6,6 +6,10 @@ body {
     height: -webkit-fill-available;
 }
 
+.small-text {
+    font-size: 15px;
+}
+
 
 .attribution { 
     font-size: 11px;
@@ -13,4 +17,20 @@ body {
 }
 .attribution a { 
     color: hsl(228, 45%, 44%);
+}
+
+.card {
+    width: 400px;
+    height: 400px;
+    display: flex;
+    margin: 0 auto;
+    flex-direction: column;
+    padding: 20px 40px 40px;
+    background: rgb(95, 94, 101);
+    border-bottom: 4px solid rgb(87, 7, 236);
+    border-radius: 6px;
+    transition: all 0.8s;
+    flex: wrap;
+    display: flex;
+    flex-wrap: wrap;  
 }
