card pos->fixed, img top->bottom cleaner fix

--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@
     background: white;
     border-radius: 20px;
     flex-wrap: wrap;  
-    position: absolute;
+    position: fixed;
     top: 25%;
     left: 39.6%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
@@ -26,7 +26,7 @@
 
 img {
     position: relative;
-    top: -1%;
+    bottom: 1%;
     right: 8%;
     float: center;
     height: 45%;
