added text to help improve users understanding.

--- a/style.css
+++ b/style.css
@@ -22,32 +22,24 @@
     top: 25%;
     left: 39.6%;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+    display: inline-block;
+    text-align: center;
 }
 
-img {
-    position: relative;
-    bottom: 1%;
-    right: 8%;
-    float: center;
-    height: 45%;
+img {   
+    height: 36vh; 
     border-radius: 20px;
 }
 
 h1 {
-    position: relative;
-    top: 0%;
-    right: 8%;
     font-size: 20px;
-    text-align: center;
+    
 }
 
 .small-text {
     font-size: 15px;
     text-align: center;
     color: hsl(220, 15%, 55%);
-    position: relative;
-    top: 2%;
-    right: 8%;
     
 }
 
@@ -56,7 +48,7 @@ body {
     background-color: hsl(212, 45%, 89%);
 }
 
-@media screen and (max-width: 376px) {
+@media screen and (max-width: 37px) {
     .card {
         position: fixed;
         left: 7%;
