--- a/style.css
+++ b/style.css
@@ -38,16 +38,20 @@ h1 {
     top: 0%;
     right: 8%;
     font-size: 20px;
-    text-align: center;
+    text-align: center; 
+    justify-content: center; 
+    flex-direction: column;
 }
 
-.small-text {
-    font-size: 15px;
-    text-align: center;
+.small-text {  
     color: hsl(220, 15%, 55%);
     position: relative;
     top: 2%;
     right: 8%;
+    font-size: 15px;
+    text-align: center; 
+    justify-content: center; 
+    flex-direction: column;  
     
 }
 
