rename to body, going to SasS

--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 
 }
 
-html {
+body {
     background-color: hsl(212, 45%, 89%);
     font-family: "Outfit", "Arial", sans-serif;
     display: grid;
