create variables for colors moved * element

--- a/style.sass
+++ b/style.sass
@@ -2,8 +2,16 @@
 
 // Variables
 $font-stack: 'Outfit', sans-serif
-$bg-primary: #000
-    
+$white: hsl(0, 0%, 100%)
+$light-gray: hsl(212, 45%, 89%)
+$grayish-blue: hsl(220, 15%, 55%)
+$dark-blue: hsl(218, 44%, 22%)
+*
+    margin: 0
+    padding: 0
+    box-sizing: border-box
+
+
 body 
     display: flex
     justify-content: center
@@ -11,4 +19,4 @@ body
     align-items: center
     height: 100vh
     font-family: $font-stack
-    overflow: hidden
+    overflow-y: hidden
