--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,10 @@
 @import url("https://fonts.googleapis.com/css2?family=Outfit:wght@400;700&display=swap");
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   display: flex;
   justify-content: center;
@@ -6,4 +12,5 @@ body {
   align-items: center;
   height: 100vh;
   font-family: "Outfit", sans-serif;
+  overflow-y: hidden;
 }/*# sourceMappingURL=style.css.map */
