--- a/style.sass
+++ b/style.sass
@@ -6,6 +6,7 @@ $white: hsl(0, 0%, 100%)
 $light-gray: hsl(212, 45%, 89%)
 $grayish-blue: hsl(220, 15%, 55%)
 $dark-blue: hsl(218, 44%, 22%)
+
 *
     margin: 0
     padding: 0
@@ -20,3 +21,15 @@ body
     height: 100vh
     font-family: $font-stack
     overflow-y: hidden
+    background-color: $light-gray
+
+.card
+    background-color: $white
+    border-radius: 10px
+    max-width: 10cm
+    height: 15cm
+    text-align: center
+
+img
+    max-width: 100%
+    padding: 0.5cm
