--- a/css/style.css
+++ b/css/style.css
@@ -22,9 +22,27 @@ body {
   max-width: 10cm;
   height: 15cm;
   text-align: center;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
 
 img {
   max-width: 100%;
   padding: 0.5cm;
+}
+
+.title-content {
+  font-size: 25px;
+  width: 85%;
+  display: flex;
+  margin: 0 auto;
+}
+
+.description-content {
+  font-size: 15px;
+  display: flex;
+  margin: 0 auto;
+  width: 65%;
+  margin-top: 0.5cm;
+  font-weight: 400;
+  color: hsl(220deg, 15%, 55%);
 }/*# sourceMappingURL=style.css.map */
