set border radius with padding

--- a/style.sass
+++ b/style.sass
@@ -26,7 +26,7 @@ body
 
 .card
     background-color: $white
-    border-radius: 10px
+    border-radius: 5%
     max-width: 10cm
     height: 15cm
     text-align: center
@@ -35,7 +35,9 @@ body
 
 img
     max-width: 100%
+    border: 0px solid
     padding: 0.5cm
+    border-radius: 8%
 
 .title-content
     font-size: 25px
