--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@ body {
 
 .card {
   background-color: hsl(0deg, 0%, 100%);
-  border-radius: 10px;
+  border-radius: 5%;
   max-width: 10cm;
   height: 15cm;
   text-align: center;
@@ -27,7 +27,9 @@ body {
 
 img {
   max-width: 100%;
+  border: 0px solid;
   padding: 0.5cm;
+  border-radius: 8%;
 }
 
 .title-content {
